# Figures

./: .gitignore  CMakeLists.txt  README.md
Headers/: AbstractFactory.h  Circle.h  CircleFixture.h  Factory.h  Figure.h  HelperFunctions.h  RandomGeneratorFigures.h  Rectangle.h  RectangleFixture.h  StreamFigureFactory.h  StringFiguresFactory.h  Triangle.h  TriangleFixture.h
src/: AbstractFactory.cpp  Application.cpp  Circle.cpp  CircleFixture.cpp  Factory.cpp  Figure.cpp  HelperFunctions.cpp  RandomGeneratorFigures.cpp  Rectangle.cpp  RectangleFixture.cpp  StreamFigureFactory.cpp  StringFiguresFactory.cpp  Triangle.cpp  TriangleFixture.cpp  figures.txt  main.cpp
test/: test.cpp
